k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: service-api
  template:
    metadata:
      labels:
        app: service-api
    spec:
      containers:
        - name: service-api
          image: karanbht/nagp-assignment:v8
          ports:
            - containerPort: 8000
