k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
spec:
  selector:
    app: service-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
